--- a/phase3/Project/sporty-shoes/src/main/resources/application.properties
+++ b/phase3/Project/sporty-shoes/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/sporty_shoes
 spring.datasource.username=root
 spring.datasource.password=root#123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8081
+server.port=8080
 spring.devtools.restart.enabled=true
